--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mock-data-api",
   "version": "1.0.0",
-  "description": "simple mock data grqhql api",
+  "description": "simple mock data graphql api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "Ernest Hemingway",
   "license": "MIT",
