--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "simple mock data graphql api",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "node index.js"
   },
   "author": "Ernest Hemingway",
   "license": "MIT",
   "dependencies": {
-    "apollo-server-express": "^3.1.2",
+    "apollo-server-express": "^3.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1"
   }
